2011-03-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplot.rc, src/win/wgnuplot.exe.manifest: add new
	manifest for wgnuplot to enable visual styles
	
	* src/win/wmenu.c, src/win/wtext.c: remove unused variables to make
	compiler happy, avoid C++ style comments
	
2011-03-13  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/cygwin/Makefile (LDLIBS): Add newly needed library.

2011-03-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.nt, src/alloc.c, src/alloc.h, src/command.c,
	src/eval.c, src/fit.c, src/gpexecute.c, src/plot.c, src/syscfg.h,
	src/win/wcommon.h, src/win/wgnuplib.c, src/win/wgnuplib.h,
	src/win/wgnuplot.mnu, src/win/wgnuplot.rc, src/win/wgraph.c,
	src/win/winmain.c, src/win/wmenu.c, src/win/wpause.c,
	src/win/wprinter.c, src/win/wtext.c, term/win.trm:
	Remove Win16 support.

	* src/win/winmain.c (WinMain): init common controls
	* config/mingw/Makefile, config/magefile.mgw, config/makefile.nt,
	conig/watcom/Makefile: add library comctl32

	* src/win/wmwenu.c (LoadMacros, CloseMacros, MenuBottonProc): use
	common controls toolbar, remove MenuBottonProc
	* src/win/wgnuplib.h (MW): add handle for toolbar, remove pointer
	to MenuBottonProc
	* src/win/wresourc.h: add ID for toolbar
	* src/win/wtext.c (WndParentProc): [WM_SIZE] forward msg to toolbar,
	[WM_PAINT] remove completely

	* src/win/wingraph.c (UpdateStatusLine, DisplaySatusLine): use common
	controls

	* src/win/winmenu.c (IShellFolder_BindToObject),
	(IShellFolder_GetDisplayNameOf): protect definition by #ifdef,
	(SendMacro) use newer variant of directory dialog

2011-03-11  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/makefile.nt: implement suggestions by Shigeharu Takeno:
	Do not use "+=" to be compatible with Visual C++ 2005; add/update
	links wo libgd and wxWidgets; add a scheme to easily select options
	[GDLIB, PDFLIB, WXT]; use linker option files for compilation of 
	wgnuplot.exe and gnuplot.exe
	